@@ -689,9 +689,11 @@ exif_data_get_type_maker_note (ExifData *d)
 	if (!e) 
 		return EXIF_DATA_TYPE_MAKER_NOTE_NONE;
 
-	/* Olympus & Nikon */
-	if ((e->size >= 8) && (!memcmp (e->data, "OLYMP", 6) ||
-			!memcmp (e->data, "OLYMPUS", 8) || !memcmp (e->data, "Nikon", 6)))
+	/* Olympus & Nikon & Sanyo */
+	if ((e->size >= 8) && ( !memcmp (e->data, "OLYMP", 6) ||
+				!memcmp (e->data, "OLYMPUS", 8) ||
+				!memcmp (e->data, "SANYO", 6) ||
+				!memcmp (e->data, "Nikon", 6)))
 		return EXIF_DATA_TYPE_MAKER_NOTE_OLYMPUS;
 
 	em = exif_data_get_entry (d, EXIF_TAG_MAKE);
